# zstd-emscripten

./: .gitignore  README.md  exported_functions.txt  exported_functions_compress.exp  exported_functions_compress.txt  exported_functions_decompress.exp  exported_functions_decompress.txt  exported_functions_min.exp  grep_api_functions.sh  index.html  llvm_build.sh  memory.c  zstd.js  zstd.wasm
.github/workflows/: llvm-build.yml
cmake/: CMakeLists.txt
cmake/emscripten/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
emscripten/: memory.c  zstd.js.c
